--- a/catalog/test.html
+++ b/catalog/test.html
@@ -8,28 +8,22 @@
   <body>
     <div class="cart">
       <div class="cart-item">
-        <h2>Item Name</h2>
+        <h2>Female Roadrunner Costume</h2>
         <img src="img/7.jpg" />
         <p>Price:$100</p>
         <form action="POST">
-          <label for="qty">Item qty:</label>
+          <label for="qty">Item qty: </label>
           <input name="qty" id="qty" type="number" min="0" max="100" />
         </form>
       </div>
-    </div>
-    <div class="side-bar">
-      <div class="shipping">
-        <p>
-          ACME Shipping is powered by hot air balloon, rocket sled, and
-          occasionally a confused carrier pigeon. We guarantee your order will
-          arrive dramatically, if not predictably.
-        </p>
-      </div>
-      <div class="totals">
-        <p>Shipping Cost: $100</p>
-        <p>Total Tax: $100</p>
-        <p>Member Discount %10</p>
-        <p>Grand Total: $100</p>
+      <div class="cart-item">
+        <h2>Cork</h2>
+        <img src="img/7.jpg" />
+        <p>Price:$100</p>
+        <form action="POST">
+          <label for="qty">Item qty: </label>
+          <input name="qty" id="qty" type="number" min="0" max="100" />
+        </form>
       </div>
     </div>
   </body>
